# resource-aggregate/commands/commands.pb.go
@@ -992,7 +992,7 @@ type RetrieveResourceRequest struct {
 	ResourceInterface string           `protobuf:"bytes,3,opt,name=resource_interface,json=resourceInterface,proto3" json:"resource_interface,omitempty"`
 	TimeToLive        int64            `protobuf:"varint,4,opt,name=time_to_live,json=timeToLive,proto3" json:"time_to_live,omitempty"` // command validity in nanoseconds. 0 means forever and minimal value is 100000000 (100ms).
 	CommandMetadata   *CommandMetadata `protobuf:"bytes,5,opt,name=command_metadata,json=commandMetadata,proto3" json:"command_metadata,omitempty"`
-	Etag              []byte           `protobuf:"bytes,6,opt,name=etag,proto3" json:"etag,omitempty"`
+	Etag              [][]byte         `protobuf:"bytes,6,rep,name=etag,proto3" json:"etag,omitempty"`
 }
 
 func (x *RetrieveResourceRequest) Reset() {
@@ -1062,7 +1062,7 @@ func (x *RetrieveResourceRequest) GetCommandMetadata() *CommandMetadata {
 	return nil
 }
 
-func (x *RetrieveResourceRequest) GetEtag() []byte {
+func (x *RetrieveResourceRequest) GetEtag() [][]byte {
 	if x != nil {
 		return x.Etag
 	}
@@ -2999,7 +2999,7 @@ var file_resource_aggregate_pb_commands_proto_rawDesc = []byte{
 	0x75, 0x72, 0x63, 0x65, 0x61, 0x67, 0x67, 0x72, 0x65, 0x67, 0x61, 0x74, 0x65, 0x2e, 0x70, 0x62,
 	0x2e, 0x43, 0x6f, 0x6d, 0x6d, 0x61, 0x6e, 0x64, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61,
 	0x52, 0x0f, 0x63, 0x6f, 0x6d, 0x6d, 0x61, 0x6e, 0x64, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74,
-	0x61, 0x12, 0x12, 0x0a, 0x04, 0x65, 0x74, 0x61, 0x67, 0x18, 0x06, 0x20, 0x01, 0x28, 0x0c, 0x52,
+	0x61, 0x12, 0x12, 0x0a, 0x04, 0x65, 0x74, 0x61, 0x67, 0x18, 0x06, 0x20, 0x03, 0x28, 0x0c, 0x52,
 	0x04, 0x65, 0x74, 0x61, 0x67, 0x22, 0x84, 0x01, 0x0a, 0x18, 0x52, 0x65, 0x74, 0x72, 0x69, 0x65,
 	0x76, 0x65, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
 	0x73, 0x65, 0x12, 0x1f, 0x0a, 0x0b, 0x76, 0x61, 0x6c, 0x69, 0x64, 0x5f, 0x75, 0x6e, 0x74, 0x69,
